--- a/source/translation/en.po
+++ b/source/translation/en.po
@@ -153,3 +153,11 @@ msgstr ""
 #: eduAnat2/FuncLayer.js
 msgid "Color map:"
 msgstr ""
+
+#. NO LONGER USED
+msgid "More info on the image database here"
+msgstr ""
+
+#: eduAnat2/Container.js
+msgid "More info on the AnaPéda image database here"
+msgstr ""
